src/test/deca/syntax/invalid/improvided/include_inv.deca
// erreur dans l'inclusion : manque de '"' au debut fu filename.
#include included.deca
{
        println("inclu");
}
